--- a/appeal.css
+++ b/appeal.css
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6 {
 body, button, input, select, textarea {
     font-family: "Roboto Serif", serif;
 }
-html {
+body {
     font-weight: bolder;
     color: white;
     background-image: url(/appealbg.jpg);
