--- a/2013tv/2013tv.css
+++ b/2013tv/2013tv.css
@@ -1066,7 +1066,7 @@ ul {
 #search-text-box {
   background-color: #f1f1f1;
   background: transparent
-    url(https://corsproxy.io/?https://web.archive.org/web/20130427132343im_/https://www.youtube.com/s/tv/html5/6940619b/img/bg-search-input.png)
+    url(https://youtomb.github.io/assets/bg-search-input.png)
     repeat-x;
   border: none;
   display: block;
