--- a/e14tv/app-prod.css
+++ b/e14tv/app-prod.css
@@ -12,7 +12,7 @@
   font-family: "youtube-icons";
   font-style: normal;
   font-weight: normal;
-  src: url("https://youtomb.github.io/assets/newicons.ttf")
+  src: url("flycons.ttf")
     format("truetype");
 }
 @font-face {
